# ReqWeb

./: .gitignore  README.md  example.py  generic_container.py  main.py  new_generic.py  pyproject.toml  requirements.txt
1_basics/: generators.ipynb  modules.ipynb  regex.py
2_advanced/: functools.ipynb  generics.ipynb  itertools.ipynb  mono_thread.py  multi_thread.py  threads.py
3_asynchrony/: 4_awaitable_loop.ipynb
3_asynchrony/asyncio/: 01_.py  02_.py  03_.py  04_.py  06_.py  07_.py
basics/: decorators.ipynb  functions.ipynb  generators.ipynb  oop.ipynb  sequences.ipynb
connect-databases/connect_sqlite/: create_database.py
connect-databases/connect_sqlite_fastapi/: app.py  books.db  crud_book.py  init_database.py
iceberg/: trip_data.ipynb
market/: main.py
programming/1_basics/: code_quality.py  collections.ipynb  functions.ipynb  iterators.ipynb
programming/2_advanced/: itertools.ipynb  multi_thread.py
programming/3_asynchrony/: 0_callbacks.py  1_sync_tasks.py  2_async_tasks.py  3_async_utils.py
programming/3_asynchrony/asyncio/: 04_.py  05_.py
programming/connect-databases/connect_sqlite/: app.py
programming/connect-databases/connect_sqlite_fastapi/: app.py  book.py  crud_book.py
programming/connect-databases/connect_sqlite_flask/: db_bees.db  test_api.py
projects/: check.py
projects/books-service/: main.py
projects/books_service/books_app/: books.db  database_books.py  main.py
projects/books_service/tests/: conftest.py  (+4 more)
projects/calculator/: controler.py  main.py  operators.py  view.py
projects/fastapi_auth/: config.py
(+15 files in other folders)
