[project]
name = "reqweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "black>=25.9.0",
    "fastapi>=0.119.0",
    "flake8>=7.3.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "ipykernel>=7.0.1",
    "notebook>=7.4.7",
    "pyarrow>=22.0.0",
    "pydantic[email]>=2.12.3",
    "pyiceberg[hive,s3fs,sql-sqlite]>=0.10.0",
    "uvicorn>=0.38.0",
]
